--- a/docs/package.json
+++ b/docs/package.json
@@ -10,7 +10,8 @@
   "repository": "https://github.com/hmvsoluciones/hmvsolucionesdocs.git/hmvsolucionesdocs",
   "scripts": {
     "dev": "vuepress dev src",
-    "build": "vuepress build src"
+    "build": "vuepress build src",
+    "deploy": "npm run build && npx gh-pages docs/.vuepress/dist"
   },
   "license": "MIT",
   "devDependencies": {
